update abbreviation and balanced brackets